# CPP-Workshop

adapter/: adapt-legacy-rectangle.cc
address_book/: address-book.cc  address-book.hh  contact-details.cc  contact-details.hh
bimap/: bimap.hxx
builder/: builder.cc
cartesian_vector/: vector.cc
chain_of_responsibility/: director.cc  handler.cc  president.cc  vice-president.cc
closer_to/: closer-to.cc
cmake/: CMakeLists.txt
cmake/cipeek/: CMakeLists.txt
cmake/cipeek/src/: cipeek.cc
cmake/include/ciutils/: ciutils.hh
cmake/src/: ciutils.cc
const/: person.cc  person.hh
constexpr_factorial/: constexpr-factorial.hh
directories_infos/: read-info.cc  read-info.hh
do_not_loop/: dnl.cc
doubly_linked_list/: list.cc  list.hh  main.cc  node.cc  node.hh
engine/: engine.cc  engine.hh  main.cc  motor-cycle.cc  motor-cycle.hh  motor-truck.cc  motor-truck.hh  vehicle.cc  vehicle.hh
equal_pairs/: pair.hh
exception/: game.cc  invalid-argument.cc  player.cc
exist_functor/: exist.hh  exist.hxx
find_optional/: find-optional.cc  find-optional.hh
for_each/: for-each.hh
forward_multiplication/: forward-multiplication.cc
game_theory/: lambdas.cc
implements/: implements.hh
int_container/: int-container.cc  int-container.hh
is_numerical/: algorithm.hh  enable-if.hh  is-numerical.hh
is_prime/: is-prime.hh
merge_sort/: merge-sort.cc
my_nfts/: auction.cc  auction.hh  nft.hh  nft.hxx  person.cc  person.hh
parse_csv/: parse-csv.cc  parse-csv.hh
path/: path.cc  path.hh  unix-path.cc  unix-path.hh  windows-path.cc  windows-path.hh
(+13 files in other folders)
